Arrow fixes. Collapse

--- a/less/global.less
+++ b/less/global.less
@@ -561,19 +561,19 @@ header {
 
   .arrow-down {
     position: absolute;
-    bottom: 0px;
+    bottom: 20px;
     left: 50%;
     .transform(translateY(-50%));
     color: @c-white;
     z-index: 30;
     cursor: pointer;
-    font-size: 34px;
+    font-size: 20px;
     display: inline-block;
-    line-height: 50px;
-    .size(36px, 50px);
+    line-height: 37px;
+    .size(26px, 39px);
     text-align: center;
     border: 1px solid @c-white;
-    border-radius: 30%;
+    border-radius: 20px;
   }
 
   .header-content {
@@ -783,3 +783,24 @@ header {
     }
   }
 }
+
+/* Region mistake */
+.region-mistake {
+  
+  .mistake-wrapper {
+    .size(70%);
+    margin: auto;
+
+    .mistake-collapse-btn {
+
+    }
+  }
+}
+
+
+
+
+
+
+
+
